client: Fix dark mode toggle coloring

--- a/client/src/components/ui/dark-mode-toggle/dark-mode-toggle.module.css
+++ b/client/src/components/ui/dark-mode-toggle/dark-mode-toggle.module.css
@@ -1,3 +1,13 @@
+.actionIcon {
+  @mixin light {
+    color: var(--mantine-color-black);
+  }
+
+  @mixin dark {
+    color: var(--mantine-color-white);
+  }
+}
+
 .icon {
   width: 20px;
   height: 20px;
